# corebank-api

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  wsgi.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  extensions.py  logging_config.py
app/api/: __init__.py  _fields.py  accounts.py  auth.py  branches.py  cards.py  credit_scores.py  customer_support.py  customers.py  employees.py  errors.py  health.py  loan_payments.py  loans.py  transactions.py  users.py
app/db/: __init__.py  pool.py  uow.py
app/repositories/: __init__.py  _base.py  accounts.py  branches.py  cards.py  credit_scores.py  customers.py  employees.py  loan_payments.py  loans.py  support_tickets.py  transactions.py  users.py
app/security/: __init__.py  auth.py
app/services/: __init__.py  _helpers.py  account_service.py  auth_service.py  branch_service.py  card_service.py  credit_score_service.py  customer_service.py  employee_service.py  exceptions.py  loan_payment_service.py  loan_service.py  support_service.py  transaction_service.py  user_service.py
docker/: entrypoint.sh
docs/: design.md  implementation-plan.md
migrations/: 001_initial_schema.sql  002_indexes.sql
scripts/: concurrency_demo.py  migrate.py
seeds/: demo_data.sql
tests/: conftest.py
tests/architecture/: test_layering.py
tests/concurrency/: test_balance_conservation.py
tests/integration/: test_api_flows.py  test_repositories.py  test_resource_crud.py  test_uow.py
tests/unit/: test_helpers.py  (+1 more)
(+1 files in other folders)
